Fix closing bracket, remove horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -707,6 +707,7 @@ header {
 
 /* Skills Card */
 .skills-section .tech-stack-container .tech-card {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -724,13 +725,15 @@ header {
     padding-right: 10px;
 }
 
-.skills-section .tech-stack-container article h3 {
+.skills-section .tech-stack-container .tech-card h3 {
     color: #ffffff; /* White for contrast on dark cards */
 }
 
 .skills-section .tech-stack-container .tech-card .tech-item-container {
     overflow-y: auto; /* Allow scrolling for overflowing items */
+    overflow-x: hidden;
     padding-right: 10px; /* Add some padding for scrollbar spacing */
+    box-sizing: border-box;
     height: calc(100% - 40px);
     max-height: 560px;
 }
@@ -751,7 +754,7 @@ header {
     font-size: 1.2rem;
     margin-bottom: 10px;
     text-align: center;
-    color: var(--text-color);
+    color: #ffffff;
 }
 
 /* Styling each tech item (logo + name) following mobile first*/
@@ -775,7 +778,7 @@ header {
 
 /* Styling for the logos */
 .skills-section .tech-stack-container .tech-card .tech-item .tech-logo {
-    width: 100%;
+    width: 60px;
     height: auto;
     transition: transform 0.3s ease-in-out; /* Smooth enlarge effect */
     object-fit: contain;
